Enable yuv decoding of progressive jpegs

BUG=598670

Review URL: https://codereview.chromium.org/1849393002

Cr-Commit-Position: refs/heads/master@{#385734}

Former-commit-id: 0a3bb6541a63a165e4fa43ad77943c6ce16d3d40